# sz

./: .gitignore  Cargo.toml  README.md  \  test.txt
src/: file.rs  file_size.rs  item.rs  item_size.rs  main.rs  sort_opt.rs  table.rs  utils.rs  walk_dir.rs
test/: ahhhhh.txt  oh.txt
test/something/: nested.txt
