[package]
name = "sz"
version = "0.1.0"
edition = "2021"
author = "Dhruva Srinivas"
license = "MIT"
description = "The only size utility you'll ever need."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clearscreen = "2.0.1"
ignore = "0.4.20"
owo-colors = "3.5.0"
tabled = "0.12.0"
